--- a/index.html
+++ b/index.html
@@ -28,20 +28,35 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar bg-dark">
+            <div class="container-lg container-fluid">
+                <a class="navbar-brand">
+                    <div class="logo d-flex ">
+                        <img src="images/tempicons/logo.svg" alt="site logo">
+                        <h1 class="text-white fs-4 text-center pt-4 ps-3">Weather Apps</h1>
+                    </div>
+                </a>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="city" aria-label="Search" name="city" id="cityNameInput"/>
+                    <button class="btn btn-outline-light mx-4" type="submit" id="searchBtn">Go</button>
+                </form>
+            </div>
+        </nav>
+    </header>
 
-
-    <main class="vh-100 d-flex flex-column">
-        <div class="logo d-flex">
+    <main class=" min-vh-100 d-flex flex-column">
+        <!-- <div class="logo d-flex fixed-top">
             <img src="images/tempicons/logo.svg" alt="site logo">
             <h1 class="text-white fs-4 text-center pt-4 ps-3">Weather Apps</h1>
-        </div>
+        </div> -->
 
         <section class="p-5">
-            <form action="#" class=" d-flex justify-content-around w-50 mx-auto">
+            <form action="#" class=" d-flex justify-content-around flex-column w-50 mx-auto">
                 <!-- <input type="search" name="country" placeholder="country" class="form-control mx-3"
                     id="countryNameInput"> -->
-                <input type="search" name="city" placeholder="city" class="form-control mx-3" id="cityNameInput">
-                <button type="submit" class="btn btn-dark mx-4" id="searchBtn">Go</button>
+                <!-- <input type="search" name="city" placeholder="city" class="form-control mx-lg-3" id="cityNameInput"> -->
+                <!-- <button type="submit" class="btn btn-dark mx-4" id="searchBtn">Go</button> -->
             </form>
         </section>
 
@@ -51,7 +66,7 @@
 
                 <div class="row g-4 ">
 
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card main-card rounded-4 bg-black bg-opacity-50">
                             <div class="card-body p-5  text-light d-flex ">
 
@@ -107,7 +122,7 @@
 
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card secondary-card rounded-4 bg-black bg-opacity-50">
                             <div class="card-body p-5  text-light d-flex justify-content-between">
                                 <div class="main-details text-center">
@@ -127,7 +142,7 @@
 
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card secondary-card rounded-4 bg-black bg-opacity-50">
                             <div class="card-body p-5  text-light d-flex justify-content-between">
                                 <div class="main-details text-center">
