--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </section>
 
 
-        <section class="result d-flex justify-content-center mt-5 pt-5 h-100">
+        <section class="result d-flex justify-content-center mt-5 py-5 h-100">
             <div class="container ">
 
                 <div class="row g-4 ">
